--- a/index.html
+++ b/index.html
@@ -75,7 +75,21 @@
         <div class="destinationContainer">
             <h1>Choose Your Destination</h1>
             <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
-            <div></div>
+            <div class="tripsDiv">
+                <div class="malInd">
+                    <div class="Maldives"><h3>Maldives</h3></div>
+                    <div class="Indonesia"><h3>Indonesia</h3></div>
+                </div>
+                <div class="SriNorKas">
+                    <div class="Srilanka"><h3>Srilanka</h3></div>
+                    <div class="NorthAmerica"><h3>North America</h3></div>
+                    <div class="Kashmir"><h3>Kashmir</h3></div>
+                </div>
+                <div class="BanBand">
+                    <div class="Bangladesh"><h3>Bangladesh</h3></div>
+                    <div class="Bandarban"><h3>Bandarban</h3></div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
