Why Choose Us section done

--- a/index.html
+++ b/index.html
@@ -92,5 +92,28 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="chooseContainer font_Mulish">
+            <h1>Why Choose Us</h1>
+            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <div class="cardContainer">
+                <div class="cards card1">
+                    <img src="./Images/hotel 1.png" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+                </div>
+                <div class="cards card2">
+                    <img src="./Images/map 1.png" alt="">
+                    <h3>World Class Service</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+                </div>
+            </div>
+            <div class="cards card3">
+                <img src="./Images/price-tag 1.png" alt="">
+                <h3>Best Price Guarantee</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
