--- a/index.html
+++ b/index.html
@@ -115,5 +115,25 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="newsletterContainer">
+            <div class="NewsletterDiv font_Mulish">
+                <h3>Newsletter</h3>
+                <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Enter your name">
+                    <input type="email" name="" id="" placeholder="Enter your email">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+            <div class="NewsletterImg">
+                <div class="font_Mulish">
+                    <p>TravelFriend.com</p>
+                    <h1>Save up to 70%</h1>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
