footer section done

--- a/index.html
+++ b/index.html
@@ -135,5 +135,22 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footerContainer font_Mulish">
+            <div class="brandLogo">
+                <img src="./Images/Group 40071 (2).png" alt="">
+                <h1 class="brandName"><span id="travelDesign">Travel</span> Friend</h1>
+            </div>
+            <p class="footerDescription">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.</p>
+            <div class="socialLogo">
+                <img src="./Images/twitter.png" alt="">
+                <img src="./Images/facebook.png" alt="">
+                <img src="./Images/insta.png" alt="">
+                <img src="./Images/github.png" alt="">
+            </div>
+            <hr>
+            <p class="rights font_Inter">2024, All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
