review section done

--- a/index.html
+++ b/index.html
@@ -115,6 +115,84 @@
             </div>
         </div>
     </section>
+    <section class="reviewSection">
+        <h1>Customer Reviews</h1>
+        <p>Read what our customers say about their travel experiences.</p>
+        <div>
+            <div class="reviewContainer font_Mulish">
+                <div class="reviewCardContainer">
+                    <div class="reviewCard font_Mulish">
+                        <div class="reviewHead">
+                            <img src="./Images/model.png" alt="">
+                            <h1>Peter</h1>
+                        </div>
+                        <p class="Rating"><span class="rateTitle">Rating:</span> 7/10</p>
+                        <p class="reviewDescription">I love the services of them, and i always satisfied by their hospitality.I regularly use their services</p>
+                    </div>
+                </div>
+            </div>
+            <div class="reviewContainer font_Mulish">
+                <div class="reviewCardContainer">
+                    <div class="reviewCard font_Mulish">
+                        <div class="reviewHead">
+                            <img src="./Images/model.png" alt="">
+                            <h1>Peter</h1>
+                        </div>
+                        <p class="Rating"><span class="rateTitle">Rating:</span> 7/10</p>
+                        <p class="reviewDescription">I love the services of them, and i always satisfied by their hospitality.I regularly use their services</p>
+                    </div>
+                </div>
+            </div>
+            <div class="reviewContainer font_Mulish">
+                <div class="reviewCardContainer">
+                    <div class="reviewCard font_Mulish">
+                        <div class="reviewHead">
+                            <img src="./Images/model.png" alt="">
+                            <h1>Peter</h1>
+                        </div>
+                        <p class="Rating"><span class="rateTitle">Rating:</span> 7/10</p>
+                        <p class="reviewDescription">I love the services of them, and i always satisfied by their hospitality.I regularly use their services</p>
+                    </div>
+                </div>
+            </div>
+            <div class="reviewContainer font_Mulish">
+                <div class="reviewCardContainer">
+                    <div class="reviewCard font_Mulish">
+                        <div class="reviewHead">
+                            <img src="./Images/model.png" alt="">
+                            <h1>Peter</h1>
+                        </div>
+                        <p class="Rating"><span class="rateTitle">Rating:</span> 7/10</p>
+                        <p class="reviewDescription">I love the services of them, and i always satisfied by their hospitality.I regularly use their services</p>
+                    </div>
+                </div>
+            </div>
+            <div class="reviewContainer font_Mulish">
+                <div class="reviewCardContainer">
+                    <div class="reviewCard font_Mulish">
+                        <div class="reviewHead">
+                            <img src="./Images/model.png" alt="">
+                            <h1>Peter</h1>
+                        </div>
+                        <p class="Rating"><span class="rateTitle">Rating:</span> 7/10</p>
+                        <p class="reviewDescription">I love the services of them, and i always satisfied by their hospitality.I regularly use their services</p>
+                    </div>
+                </div>
+            </div>
+            <div class="reviewContainer font_Mulish">
+                <div class="reviewCardContainer">
+                    <div class="reviewCard font_Mulish">
+                        <div class="reviewHead">
+                            <img src="./Images/model.png" alt="">
+                            <h1>Peter</h1>
+                        </div>
+                        <p class="Rating"><span class="rateTitle">Rating:</span> 7/10</p>
+                        <p class="reviewDescription">I love the services of them, and i always satisfied by their hospitality.I regularly use their services</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section>
         <div class="newsletterContainer">
             <div class="NewsletterDiv font_Mulish">
