change all lorems para

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="bannerSection">
         <div class="bannerDiv">
             <h1 class="bannerTitle font_Mulish">Explore Your Travel</h1>
-            <p class="bannerDescription font_Mulish">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+            <p class="bannerDescription font_Mulish">Embark on a journey of discovery and adventure. Experience the thrill of exploring new places, meeting diverse cultures, and creating lasting memories with Travel Friend.</p>
             <div class="searchForm">
                 <form action="" class="form">
                     <input type="text" placeholder="Where go">
@@ -57,13 +57,13 @@
         <div class="popularContainer">
             <div class="PopularLeftDiv font_Mulish">
                 <h1 class="popularTitle">Our Popular Tours</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p>Discover handpicked tours curated for your ultimate satisfaction. Dive into unique experiences that redefine travel and create unforgettable memories.</p>
                 <ul>
-                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-                    <li>Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    <li>Explore timeless landscapes and cultures with our expertly crafted tours.</li>
+                    <li>Indulge in the luxury of our carefully selected accommodations, offering comfort and elegance.</li>
+                    <li>Experience the world-class service that sets Travel Friend apart from the rest.</li>
                 </ul>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt.</p>
+                <p>Travel with confidence, knowing that your journey is in the hands of seasoned professionals dedicated to making your dreams a reality.</p>
                 <button class="btn-primary font_Mulish">Read More</button>
             </div>
             <div class="PopularImg">
@@ -74,7 +74,7 @@
     <section>
         <div class="destinationContainer">
             <h1>Choose Your Destination</h1>
-            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <p>Embark on a journey to breathtaking destinations that captivate the senses. Explore diverse cultures, stunning landscapes, and create lasting memories. Whether it's the serene beaches of Maldives, the lush beauty of Indonesia, or the vibrant landscapes of Bangladesh – your next adventure awaits.</p>
             <div class="tripsDiv">
                 <div class="malInd">
                     <div class="Maldives"><h3>Maldives</h3></div>
@@ -95,29 +95,29 @@
     <section>
         <div class="chooseContainer font_Mulish">
             <h1>Why Choose Us</h1>
-            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <p>Elevate your travel with Travel Friend – where handpicked hotels, world-class service, and our best price guarantee redefine your journey. Choose excellence, choose us.</p>
             <div class="cardContainer">
                 <div class="cards card1">
                     <img src="./Images/hotel 1.png" alt="">
                     <h3>Handpicked Hotels</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+                    <p>Indulge in handpicked luxury. Our curated hotels redefine comfort, promising a stay beyond expectations.</p>
                 </div>
                 <div class="cards card2">
                     <img src="./Images/map 1.png" alt="">
                     <h3>World Class Service</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+                    <p>Experience top-notch service from start to finish. Our dedicated team ensures every detail of your journey exceeds expectations.</p>
                 </div>
             </div>
             <div class="cards card3">
                 <img src="./Images/price-tag 1.png" alt="">
                 <h3>Best Price Guarantee</h3>
-                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+                <p>Unbeatable prices, guaranteed. Explore with confidence knowing you've secured the best deal for your journey.</p>
             </div>
         </div>
     </section>
     <section class="reviewSection">
         <h1>Customer Reviews</h1>
-        <p>Read what our customers say about their travel experiences.</p>
+        <p>Read what our valued customers have to say about their extraordinary travel experiences with Travel Friend.</p>
         <div>
             <div class="reviewContainer font_Mulish">
                 <div class="reviewCardContainer">
@@ -219,7 +219,7 @@
                 <img src="./Images/Group 40071 (2).png" alt="">
                 <h1 class="brandName"><span id="travelDesign">Travel</span> Friend</h1>
             </div>
-            <p class="footerDescription">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.</p>
+            <p class="footerDescription">Your passport to unforgettable adventures. Discover a world of travel possibilities with Travel Friend – where every journey is a story.</p>
             <div class="socialLogo">
                 <img src="./Images/twitter.png" alt="">
                 <img src="./Images/facebook.png" alt="">
