some bug fixes for deployment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="navDiv font_Mulish">
                 <div class="brandLogo">
-                    <img src="./Images/Group 40071 (2).png" alt="">
+                    <img src="./Images/Group40071.png" alt="">
                     <h1 class="brandName"><span id="travelDesign">Travel</span> Friend</h1>
                 </div>
                 <div class="navLink">
@@ -67,7 +67,7 @@
                 <button class="btn-primary font_Mulish">Read More</button>
             </div>
             <div class="PopularImg">
-                <img src="./Images/Rectangle 4.png" alt="">
+                <img src="./Images/Rectangle4.png" alt="">
             </div>
         </div>
     </section>
@@ -98,18 +98,18 @@
             <p>Elevate your travel with Travel Friend – where handpicked hotels, world-class service, and our best price guarantee redefine your journey. Choose excellence, choose us.</p>
             <div class="cardContainer">
                 <div class="cards card1">
-                    <img src="./Images/hotel 1.png" alt="">
+                    <img src="./Images/hotel1.png" alt="">
                     <h3>Handpicked Hotels</h3>
                     <p>Indulge in handpicked luxury. Our curated hotels redefine comfort, promising a stay beyond expectations.</p>
                 </div>
                 <div class="cards card2">
-                    <img src="./Images/map 1.png" alt="">
+                    <img src="./Images/map1.png" alt="">
                     <h3>World Class Service</h3>
                     <p>Experience top-notch service from start to finish. Our dedicated team ensures every detail of your journey exceeds expectations.</p>
                 </div>
             </div>
             <div class="cards card3">
-                <img src="./Images/price-tag 1.png" alt="">
+                <img src="./Images/price-tag1.png" alt="">
                 <h3>Best Price Guarantee</h3>
                 <p>Unbeatable prices, guaranteed. Explore with confidence knowing you've secured the best deal for your journey.</p>
             </div>
@@ -216,7 +216,7 @@
     <footer>
         <div class="footerContainer font_Mulish">
             <div class="brandLogo">
-                <img src="./Images/Group 40071 (2).png" alt="">
+                <img src="./Images/Group40071.png" alt="">
                 <h1 class="brandName"><span id="travelDesign">Travel</span> Friend</h1>
             </div>
             <p class="footerDescription">Your passport to unforgettable adventures. Discover a world of travel possibilities with Travel Friend – where every journey is a story.</p>
