added deals section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,54 @@
             </div>
         </div>
     </section>
+    <section class="dealsSection">
+        <h1 class="dealsTitle">Deals & Discounts</h1>
+        <p class="dealsDescription">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+        <div class="dealsConatinerDiv font_Mulish">
+            <div>
+                <div class="cardRightFloat font_Mulish">
+                    <div class="innerCrad">
+                        <ul>
+                            <li><img src="./Images/clock.png" alt="">7 Day / 6 Night</li>
+                            <li><img src="./Images/persons.png" alt="">Max : 12</li>
+                            <li><img src="./Images/location.png" alt="">Malaysia</li>
+                        </ul>
+                        <h3>Tour To Satorini</h3>
+                        <p class="tourdes">Explore the beauty of Santorini with our 7-day tour. Immerse yourself in breathtaking landscapes and cultural wonders.</p>
+                        <p class="priceTag">Price: $1300-$1500</p>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                </div>
+                <div class="cardLeftFloat font_Mulish">
+                    <div class="innerCrad">
+                        <ul>
+                            <li><img src="./Images/clock.png" alt="">7 Day / 6 Night</li>
+                            <li><img src="./Images/persons.png" alt="">Max : 10</li>
+                            <li><img src="./Images/location.png" alt="">Srilanka</li>
+                        </ul>
+                        <h3>Serene Sri Lanka</h3>
+                        <p class="tourdes">Experience the serenity of Sri Lanka on our 7-day tour. Discover cultural richness and scenic beauty like never before.</p>
+                        <p class="priceTag">Price: $1200-$1300</p>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                </div>
+                <div class="cardRightFloat">
+                    <div class="innerCrad">
+                        <ul>
+                            <li><img src="./Images/clock.png" alt="">7 Day / 6 Night</li>
+                            <li><img src="./Images/persons.png" alt="">Max : 15</li>
+                            <li><img src="./Images/location.png" alt="">Indonesia</li>
+                        </ul>
+                        <h3>Exotic Indonesia</h3>
+                        <p class="tourdes">Embark on an exotic journey through Indonesia with our 7-day tour. Uncover the allure of diverse landscapes and vibrant cultures.</p>
+                        <p class="priceTag">Price: $1400-$1800</p>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="btn-primary">See All Packages</button>
+    </section>
     <section class="reviewSection">
         <h1>Customer Reviews</h1>
         <p>Read what our valued customers have to say about their extraordinary travel experiences with Travel Friend.</p>
@@ -221,10 +269,10 @@
             </div>
             <p class="footerDescription">Your passport to unforgettable adventures. Discover a world of travel possibilities with Travel Friend – where every journey is a story.</p>
             <div class="socialLogo">
-                <img src="./Images/twitter.png" alt="">
-                <img src="./Images/facebook.png" alt="">
-                <img src="./Images/insta.png" alt="">
-                <img src="./Images/github.png" alt="">
+                <a href="#"><img src="./Images/twitter.png" alt=""></a>
+                <a href="#"><img src="./Images/facebook.png" alt=""></a>
+                <a href="#"><img src="./Images/insta.png" alt=""></a>
+                <a href="#"><img src="./Images/github.png" alt=""></a>
             </div>
             <hr>
             <p class="rights font_Inter">2024, All Rights Reserved.</p>
